# btleplug

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: android-integration-test-runbook.md  plan-fix-android-test-failures.md  zephyr-test-peripheral-debugging.md
examples/: event_driven_discovery.rs  lights.rs
scripts/: build-java.sh  run-integration-tests-android.sh  run-integration-tests.ps1  run-integration-tests.sh  run-jni-tests.sh
src/: lib.rs
src/api/: mod.rs
test-peripheral/: CLAUDE.md  README.md
test-peripheral/zephyr/: CMakeLists.txt  prj.conf
test-peripheral/zephyr/boards/: esp32s3_devkitc_esp32s3_procpu.conf  nrf52840dk_nrf52840.conf
test-peripheral/zephyr/src/: control_service.c  gatt_profile.c  gatt_profile.h  main.c  test_handlers.c
tests/: CLAUDE.md  test_advertisement_manufacturer_data.rs  test_advertisement_services.rs  test_characteristic_properties.rs  test_configurable_notification_payload.rs  test_connect_and_disconnect.rs  test_connection.rs  test_connection_parameters.rs  test_descriptor_discovery.rs  test_descriptors.rs  test_device_info.rs  test_discover_characteristics.rs  test_discover_peripheral_by_name.rs  test_discover_services.rs  test_discovery.rs  test_long_value_read_write.rs  test_mtu_after_connection.rs  test_notifications.rs  test_peripheral_triggered_disconnect.rs  test_properties_contain_peripheral_info.rs  test_read_counter_increments.rs  test_read_only_descriptor.rs  test_read_rssi.rs  test_read_static_value.rs  test_read_write.rs  (+11 more)
tests/android/rust/: Cargo.toml
tests/android/rust/src/: lib.rs
(+45 files in other folders)
