[package]
name = "btleplug-android-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
btleplug = { path = "../../.." }
jni = "0.19"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
uuid = "1"
futures = "0.3"
android_logger = "0.14"
log = "0.4"

[profile.release]
panic = "unwind"
